--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,10 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation 'info.picocli:picocli:4.7.4'
 }
 
 test {
     useJUnitPlatform()
 }
+
