--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,10 @@ plugins {
     id 'application'
 }
 
+plugins {
+    id 'checkstyle'
+}
+
 application {
     mainClass = 'hexlet.code.App'
 }
@@ -27,6 +31,8 @@ dependencies {
     implementation 'info.picocli:picocli:4.7.4'
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.15.2'
     implementation 'com.google.code.gson:gson:2.8.7'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 test {
