--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,10 @@ application {
     mainClass = 'hexlet.code.App'
 }
 
+tasks.named('test', Test) {
+    useJUnitPlatform()
+}
+
 compileJava {
     options.release = 17
 }
