--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -18,6 +18,14 @@ jobs:
         uses: gradle/gradle-build-action@749f47bda3e44aa060e82d7b3ef7e40d953bd629
         with:
           arguments: build
+      - name: Publish code coverage
+        uses: paambati/codeclimate-action@v3.0.0
+        env:
+          CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
+          JACOCO_SOURCE_PATH: app/src/main/java
+        with:
+          coverageCommand: make report
+          coverageLocation: ${{github..workspace}}/build/reports/jacoco/test/jacocoTestReport.xml:jacoco
 
 #    steps:
 #      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
