--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -25,7 +25,7 @@ jobs:
           JACOCO_SOURCE_PATH: src/main/java
         with:
           coverageCommand: make report
-          coverageLocation: ${{github.workspace}}/build/reports/jacoco/test/html/jacocoTestReport.xml:jacoco
+          coverageLocations: ${{github.workspace}}/build/reports/jacoco/test/html/jacocoTestReport.xml:jacoco
 
 #    steps:
 #      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
