--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -25,7 +25,8 @@ jobs:
         uses: paambaati/codeclimate-action@v3.0.0
         env:
           CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
-          JACOCO_SOURCE_PATH: src/main/java
+#          JACOCO_SOURCE_PATH: src/main/java ./cc-test-reporter format-coverage target/site/jacoco/jacoco.xml --input-type jacoco ./cc-test-reporter upload-coverage
+          JACOCO_SOURCE_PATH: ${{github.workspace}}/src/main/java
         with:
           coverageCommand: make report
           coverageLocations: ${{github.workspace}}/build/reports/jacoco/test/html/jacocoTestReport.xml:jacoco
