--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -19,17 +19,16 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
           arguments: build
-#          build-root-directory: app
-#          gradle-version: 8.2.1
-      - name: Publish code coverage
-        uses: paambaati/codeclimate-action@v3.0.0
-        env:
-          CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
-#          JACOCO_SOURCE_PATH: src/main/java ./cc-test-reporter format-coverage target/site/jacoco/jacoco.xml --input-type jacoco ./cc-test-reporter upload-coverage
-          JACOCO_SOURCE_PATH: ${{github.workspace}}/src/main/java
-        with:
-          coverageCommand: make report
-          coverageLocations: ${{github.workspace}}/build/reports/jacoco/test/html/jacocoTestReport.xml:jacoco
+          build-root-directory: app
+          gradle-version: 8.2.1
+#      - name: Publish code coverage
+#        uses: paambaati/codeclimate-action@v3.1.1
+#        env:
+#          CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
+#          JACOCO_SOURCE_PATH: src/main/java
+#        with:
+#          coverageCommand: make report
+#          coverageLocations: ${{github.workspace}}/build/reports/jacoco/test/jacocoTestReport.xml:jacoco
 
 #    steps:
 #      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
