--- a/build.gradle
+++ b/build.gradle
@@ -21,9 +21,11 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
     implementation 'info.picocli:picocli:4.7.4'
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.15.2'
-    implementation 'com.google.code.gson:gson:2.8.7'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.15.2'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.13.0'
+
 }
 
 //tasks.named('test', Test) {
