--- a/build.gradle
+++ b/build.gradle
@@ -25,22 +25,13 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.15.2'
     implementation group: 'commons-io', name: 'commons-io', version: '2.13.0'
-
+    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.24.2'
 }
-
-//tasks.named('test', Test) {
-//    useJUnitPlatform()
-//}
 
 tasks.test {
     useJUnitPlatform()
     finalizedBy jacocoTestReport // report is always generated after tests run
 }
-
-//test {
-//    finalizedBy jacocoTestReport // report is always generated after tests run
-//}
-
 
 tasks.jacocoTestReport {
     dependsOn test // tests are required to run before generating the report
@@ -48,8 +39,3 @@ tasks.jacocoTestReport {
         xml.required = true
     }
 }
-
-//test {
-//    useJUnitPlatform()
-//}
-
