--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -19,6 +19,7 @@ jobs:
         with:
           arguments: build
           gradle-version: 8.2.1
+          build-root-directory: app
       - name: Publish code coverage
         uses: paambaati/codeclimate-action@v3.1.1
         env:
