--- a/app/Makefile
+++ b/app/Makefile
@@ -1,15 +1,17 @@
 .DEFAULT_GOAL := build-run
 
 run-dist:
-	./app/build/install/app/bin/app
+	./build/install/app/bin/app
 
 build:
-	./app/gradlew clean build
+	./gradlew clean build
 
 run:
-	./app/gradlew run
+	./gradlew run
 
 report:
-	./app/gradlew jacocoTestReport
+	./gradlew jacocoTestReport
+
+build-run: build run
 
 .PHONY: build
