--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ version = '1.0-SNAPSHOT'
 
 application { mainClass = 'hexlet.code.App' }
 
-compileJava { options.release = 17 }
+compileJava { options.release = 20 }
 
 repositories {
     mavenCentral()
@@ -20,8 +20,8 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     implementation 'info.picocli:picocli:4.7.4'
-//    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.15.2'
-//    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
+    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.15.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.15.2'
     implementation group: 'commons-io', name: 'commons-io', version: '2.13.0'
